docker api; create image endpoint; Dockerfile; start-server.sh

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+server.port=${GC_CLOUD_PORT}
+
+spring.datasource.url=jdbc:mysql://${GC_CLOUD_DB_HOST}:${GC_CLOUD_DB_PORT}/${GC_CLOUD_DB_NAME}
+spring.datasource.username=${GC_CLOUD_DB_USER}
+spring.datasource.password=${GC_CLOUD_DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=update
+
