fix jar name in target for Dockerfile

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
     </dependencies>
 
     <build>
+        <finalName>CloudService</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
