use redis to register in bungee;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.username=${GC_CLOUD_DB_USER}
 spring.datasource.password=${GC_CLOUD_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+spring.data.redis.host=${GC_CLOUD_REDIS_HOST}
+spring.data.redis.port=${GC_CLOUD_REDIS_PORT}
+
 spring.jpa.open-in-view=false
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
