--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=${GC_CLOUD_PORT}
 spring.datasource.url=jdbc:mysql://${GC_CLOUD_DB_HOST}:${GC_CLOUD_DB_PORT}/${GC_CLOUD_DB_NAME}
 spring.datasource.username=${GC_CLOUD_DB_USER}
 spring.datasource.password=${GC_CLOUD_DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.data.redis.host=${GC_CLOUD_REDIS_HOST}
 spring.data.redis.port=${GC_CLOUD_REDIS_PORT}
