--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,3 +83,9 @@ jobs:
     #  # This step uses the identity token to provision an ephemeral certificate
     #  # against the sigstore community Fulcio instance.
     #  run: cosign sign ${{ steps.meta.outputs.tags }}@${{ steps.build-and-push.outputs.digest }}
+    
+    - name: Publish to GitHub Packages Apache Maven
+      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
