--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub GrexCraft Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/GrexCraft/CloudSystemService</url>
+        </repository>
+    </distributionManagement>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
